--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.56.3",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-scroll": "^1.9.3",
     "react-spinners": "^0.17.0",
     "swiper": "^11.2.6"
   },
